--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -14,8 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +34,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+#li-blue{
+  font-weight: 700;
+  color: purple;
+  
+}
+#head{
+  text-align: center;
+}
+h1{
+  text-align: center;
 }
