--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
-.App {
-  text-align: left;
-}
 
 .App-logo {
-  height: 40vmin;
+  height: 4rem;
   pointer-events: none;
+  justify-content: left;
+  margin-left: 3rem;
+}
+.sajili{
+  justify-content: right;
+  margin-left: 3rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,15 +16,6 @@
   }
 }
 
-.App-header {
-  min-height: 50vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -40,12 +34,7 @@
   color: purple;
   
 }
-#head{
-  text-align: center;
-}
-h1{
-  text-align: center;
-}
-.card1{
 
+h1{
+  text-align: left;
 }
